--- a/BackgroundSAT.tex
+++ b/BackgroundSAT.tex
@@ -264,5 +264,7 @@ Resolution Algorithm
 \section{Translation to CNF}
 In order to apply most modern SAT solvers typically one has to first econde the SAT problem to CNF. There are a number of translations available, some naive approaches can exponentially increase the size of the resulting formula. In the following we look at the most commonly used encoding called the Tseitin Expansion \cite{GT83}.
 
+\begin{comment}
 \section{The Future: Satisfiability Modulo Theory}
 More recently a new type of solver has emerged that can deal with first order formulae, these solvers are based on SAT algorithms and include extra theory modules for reasoning about arithmetic,arrays, quantifiers and equality, hence the name \emph{satisfiability modulo theory}.
+\end{comment}
