--- a/Hybridautomata.tex
+++ b/Hybridautomata.tex
@@ -515,7 +515,7 @@ We define a \emph{labelled transition system} $LTS = (S,S_0,T,L)$ as follows:
 
 \item $L$ is a set of \emph{labels}
 
-\item $T$ is ternary  relation $S \xrightarrow{a} S$ of type $S \times L \times S$, over the state space $S$.
+\item $T$ is ternary  relation $S \xrightarrow{a} S$ of type $S \times L \times S$.
 
 \end{itemize}
 \end{mydef}
@@ -569,19 +569,27 @@ All transitions of a timed transition system $S^t_H$ have an associated \emph{du
  \end{mydef}
 
 \section{Automaton Validation}
-In the following we prove that each automaton is non-zeno i.e. that time can progress in every state of the system. This is important for verification purposes as simulations and model checking algorithms require the system to be live so that time can progress. In each of the proofs we perform a case by case arguement for each control mode of the automaton.
+In the following we prove that each automaton is non-zeno i.e. that time can progress in every state of the system. This is important for verification purposes as simulations and model checking algorithms require the system to be live so that time can progress. In each of the proofs we perform a case by case arguement for each control mode of the automaton. The proof for the interlocking automaton is trivial since it does not contain any continuous variables, flow conditions or invariants and therefore it is not possible for the automaton to enter a state in white time cannot progress.
 
 \begin{mytheorem}[Train Automaton is Non-Zeno]
 The hybrid automaton  $H_{T}$ is 
 \begin{proof}
+The proof proceeds by performing a case distinction on the state of $H_{T}$.
+\begin{description}
+\item[Case: Stopped] There are no flows in this state, therefore invariant $Speed = 0$ can not be violated.
 
 
+\item[Case: Accelerating] The invariant $\BD{Speed} \leq \DMA{D(t)}{EoA}$ bounds the increase of the variables for the distance and speed which occur in this state. Eventually, the distance and speed will increase enough for $\BD{Speed} = \DMA{D(t)}{EoA}$ to hold and time will no longer be able to progress in this state, however a jump can occur to the Braking state in which the invariant $\BD{Speed} = \DMA{D(t)}{EoA}$ holds.
+
+
+\item[Case: Full Allowed Speed] 
+ 
+
+\item[Case: Braking]
+\end{description}
 \end{proof}
 \end{mytheorem}
 
-\begin{mytheorem}[Interlocking Automaton is Non-Zeno]
-
-\end{mytheorem}
 
 \begin{mytheorem}[Radio Block Processor Automaton is Non-Zeno]
 
